# quicktvui-sdk

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
base/sdk-base/: build.gradle
base/ui/: build.gradle  maven.txt
core/: build.gradle
core/sdk-core/: build.gradle  build.sh  consumer-rules.pro  dict5.txt  maven.txt  proguard-rules.pro
docs/: cus_module_component.md  initialize.md  publish_sdk.md
gradle/: libs.versions.toml  maven.gradle
plugin/annotations/: maven.txt
plugin/compiler/: build.gradle  maven.txt
support/audio-record/: build.gradle
support/audio-record/src/main/java/cpp/: AndroidMP3Encoder.cpp  AndroidMP3Encoder.h  CMakeLists.txt
support/audio-record/src/main/java/cpp/lamemp3/: fft.c  id3tag.c  machine.h  quantize.c  set_get.h  tables.c  vbrquantize.c
support/border-drawable/: README.md  build.gradle
support/brightness/: build.gradle
support/canvas/: build.gradle
support/chart/: build.gradle
support/core/: build.gradle
support/data-group/: build.gradle
support/data-shared/: build.gradle
support/device-info/: build.gradle
support/download/: build.gradle
support/gif-view/: build.gradle
support/ijk-base/: build.gradle  consumer-rules.pro  proguard-rules.pro
support/image-loader/: build.gradle  consumer-rules.pro  proguard-rules.pro
support/install-manager/: build.gradle
support/long-image/: build.gradle  proguard-rules.pro
support/lottie-view/: build.gradle  proguard-rules.pro
support/player-audio-android/: build.gradle
support/player-audio-ijk/: build.gradle  (+1 more)
(+1595 files in other folders)
